src/core/Claroline/CoreBundle/Tests/Stub/plugin/extension/Valid/Minimal/ValidMinimal.php
<?php

namespace Valid\Minimal;

use Claroline\CoreBundle\Library\Plugin\ClarolineExtension;

class ValidMinimal extends ClarolineExtension
{
}